Fix layout: Align header action buttons to the right with consistent gap

--- a/src/App.scss
+++ b/src/App.scss
@@ -34,7 +34,9 @@
     }
 
     .actionSection {
-      justify-content: space-around;
+      justify-content: flex-end;
+      column-gap: 2rem;
+      padding-right: 2rem;
       flex-basis: 40%;
 
       & > * {
